--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
 /*=============== GOOGLE FONTS ===============*/
 @import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 
 /*=============== VARIABLES CSS ===============*/
 :root {
@@ -87,6 +88,51 @@
     --small-font-size: .875rem;
   }
 }
+
+
+/*=============== LOADING SCREEN =============*/
+
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#loading-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:#010509;
+  opacity: 1;
+  transition: opacity 1s ease;
+  z-index: 1000; /* Ensure it's above all other elements */
+}
+
+.hidden_3 {
+  display: none;
+}
+
+#lottie-container {
+  width: 200px; /* Adjust size as needed */
+  height: 200px; /* Adjust size as needed */
+}
+
+/* Hide the loading screen once the page has loaded */
+body.loaded #loading-screen {
+  opacity: 0;
+}
+
+body.loaded .hidden_3 {
+  display: none;
+}
+
 
 /*=============== BASE ===============*/
 * {
