--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4108,6 +4108,7 @@ img {
 
   .swiper-button-prev-unique,
   .swiper-button-next-unique {
+    opacity: .5;
     position: absolute;
     top: 83%;
     transform: translateY(-50%);
@@ -4121,6 +4122,14 @@ img {
 
   .swiper-button-next-unique {
     right: 2%;
+  }
+  
+  .swiper-button-prev-unique:hover {
+    opacity: 1;
+  }
+
+  .swiper-button-next-unique:hover {
+    opacity: 1;
   }
 
   /* Hide the default Swiper navigation buttons */
@@ -5249,6 +5258,7 @@ img {
 
   .swiper-button-prev-unique,
   .swiper-button-next-unique {
+    opacity: .5;
     position: absolute;
     top: 82%;
     transform: translateY(-50%);
@@ -5262,6 +5272,14 @@ img {
 
   .swiper-button-next-unique {
     right: 2%;
+  }
+  
+  .swiper-button-prev-unique:hover {
+    opacity: 1;
+  }
+  
+  .swiper-button-next-unique:hover {
+    opacity: 1;
   }
 
   /* Hide the default Swiper navigation buttons */
@@ -6415,6 +6433,7 @@ img {
 
   .swiper-button-prev-unique,
   .swiper-button-next-unique {
+    opacity: .5;
     position: absolute;
     top: 80%;
     transform: translateY(-50%);
@@ -6428,6 +6447,14 @@ img {
 
   .swiper-button-next-unique {
     right: 5%;
+  }
+  
+  .swiper-button-prev-unique:hover {
+    opacity: 1;
+  }
+  
+  .swiper-button-next-unique:hover {
+    opacity: 1;
   }
 
   /* Hide the default Swiper navigation buttons */
@@ -7605,6 +7632,7 @@ img {
 
   .swiper-button-prev-unique,
   .swiper-button-next-unique {
+    opacity: .5;
     position: absolute;
     top: 80%;
     transform: translateY(-50%);
@@ -7618,6 +7646,14 @@ img {
 
   .swiper-button-next-unique {
     right: 5%;
+  }
+  
+  .swiper-button-prev-unique:hover {
+    opacity: 1;
+  }
+  
+  .swiper-button-next-unique:hover {
+    opacity: 1;
   }
 
   /* Hide the default Swiper navigation buttons */
